Bug 440171 - Freehand path tool bug in Krita 5 pre-alpha. It's present in all builds so far.
Summary: Freehand path tool bug in Krita 5 pre-alpha. It's present in all builds so far.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Freehand (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-07-23 04:38 UTC by jedhurricane
Modified: 2021-07-27 13:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Color picking activates the lasso line from the source of the color pick point. (31.23 KB, image/png)
2021-07-23 04:38 UTC, jedhurricane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jedhurricane 2021-07-23 04:38:41 UTC
Created attachment 140269 [details]
Color picking activates the lasso line from the source of the color pick point.

SUMMARY
When you try color picking while in the freehand path tool, the action of picking a color also activates the freehand path tool, causing the lasso to be dragged from the source of the color pick point to wherever your cursor goes.This does not happen in krita 4.5


STEPS TO REPRODUCE
1. Select the freehand path tool
2. Change fill to foreground color
3. Change outline to no outline or brush
4. Try picking a color on the canvas

OBSERVED RESULT
The lasso tool gets activated and it's stuck leading to an unintended fill.

EXPECTED RESULT
When you color pick something while in the Freehand path tool, It should work the same as when you're using it in brush mode. Both tools need to remain separate from each other.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2021-07-23 07:45:19 UTC
I can reproduce and confirm this for the July 22 5.0.0-prealpha (git 01f361d) appimage on Debian 10.
It does not happen with the 4.4.5 appimage, hence regression.

I see a different presentation of the bug as follows while using the freehand path tool on a vector or a paint layer:

If the Ctrl colour picker is used to pick a colour from the canvas and the cursor is moved to a different location and then used to draw a line/shape,
a line is drawn from the location of the picked colour to the start of the line/shape drawn by the freehand path tool, which then continues to draw normally.

The colour of that drawn line and the freehand path line/shape is the previous colour used.
When the freehand path drawn line/shape is completed, the colour changes to the picked colour.
Comment 2 sh_zam 2021-07-27 13:57:58 UTC
Git commit f808f0c53e0a2fb6490c11779ca98ad8a68e0a01 by Sharaf Zaman.
Committed on 27/07/2021 at 13:55.
Pushed by szaman into branch 'master'.

Fix Color picking in Freehand Path Tool and Bezier Curve tool

This bug was caused because the tools weren't using the usual
design. So, when the user would use color picker it would
send `beginPrimaryAction` to color picker, but also send
`mousePressEvent` to the primary tool.

(cherry picked from commit 5ec68b37737d383bb906488ed52b350e5525a95b)

# Conflicts:
#	plugins/tools/basictools/kis_tool_path.cc

M  +17   -9    plugins/tools/basictools/kis_tool_path.cc
M  +8    -2    plugins/tools/basictools/kis_tool_path.h
M  +24   -2    plugins/tools/basictools/kis_tool_pencil.cc
M  +7    -0    plugins/tools/basictools/kis_tool_pencil.h

https://invent.kde.org/graphics/krita/commit/f808f0c53e0a2fb6490c11779ca98ad8a68e0a01