Fix Color picking in Freehand Path Tool and Bezier Curve tool

This bug was caused because the tools weren't using the usual
design. So, when the user would use color picker it would
send `beginPrimaryAction` to color picker, but also send
`mousePressEvent` to the primary tool.

BUG:440171

(cherry picked from commit 5ec68b37737d383bb906488ed52b350e5525a95b)

# Conflicts:
#	plugins/tools/basictools/kis_tool_path.cc